After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 674052 - sidebar item not selected when started from command line
sidebar item not selected when started from command line
Status: RESOLVED FIXED
Product: nautilus
Classification: Core
Component: Sidebar
3.4.x
Other Linux
: Normal normal
: ---
Assigned To: Nautilus Maintainers
Nautilus Maintainers
: 686198 (view as bug list)
Depends on:
Blocks:
 
 
Reported: 2012-04-13 13:54 UTC by Luca Chiodini
Modified: 2012-11-27 13:00 UTC
See Also:
GNOME target: ---
GNOME version: ---



Description Luca Chiodini 2012-04-13 13:54:47 UTC
With Ubuntu 12.04
- Right-click on nautilus icon in the launcher;
- Select a folder frorm the quicklist, e.g. 'Music'

Actual behaviour:
- The opened nautilus window has no folder lighted in the left-sidebar

Correct behaviour:
- As normal, actual folder should be lighted (e.g. 'Music')
Comment 1 Cosimo Cecchi 2012-07-20 15:02:50 UTC
Mass changing component for BZ cleanup, sorry for the spam.
Comment 2 William Jon McCann 2012-08-17 22:37:23 UTC
We don't have a quicklist but I think this is basically saying that when you do:
nautilus $HOME/Music

from the command line the Music item in the sidebar isn't lit.
Comment 3 Lapo Calamandrei 2012-10-29 10:18:29 UTC
I think this one is a general issue, for example when you start nautilus from the launcher (which opens up $HOME) nothing is selected on the sidebar.
Comment 4 Cosimo Cecchi 2012-10-29 11:53:43 UTC
Pushed a fix for this to git now.
Comment 5 Daniel Drake 2012-11-27 13:00:29 UTC
*** Bug 686198 has been marked as a duplicate of this bug. ***