places-sidebar: make sure to pre-select the active item on construction

Ensure the current window URI gets selected in the sidebar also when
it's already set on the window at construction.
At the same time, move the sidebar construction from
nautilus_window_show() to nautilus_window_constructed().

https://bugzilla.gnome.org/show_bug.cgi?id=674052